--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -49,17 +49,13 @@
     <table class="table table-striped cart-list">
                         <thead>
                             <tr>
-                                <th>
-                                    Product
+                                <th translate="cart.product">
                                 </th>
-                                <th>
-                                    Price
+                                <th translate="cart.price">
                                 </th>
-                                <th>
-                                    Quantity
+                                <th translate="cart.quantity">
                                 </th>
-                                <th>
-                                    Subtotal
+                                <th translate="cart.subtotal">
                                 </th>
                                 <th>
                                     
