--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -79,7 +79,7 @@
     </div>
     <!-- /bg_white -->
 
-    <div class="tabs_product bg_white version_2">
+    <!-- <div class="tabs_product bg_white version_2">
         <div class="container">
             <ul class="nav nav-tabs" role="tablist">
                 <li class="nav-item">
@@ -90,11 +90,11 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </div> -->
     <!-- /tabs_product -->
 
     <div class="tab_content_wrapper">
-        <div class="container">
+        <!-- <div class="container">
             <div class="tab-content" role="tablist">
                 <div id="pane-A" class="card tab-pane fade active show" role="tabpanel" aria-labelledby="tab-A">
                     <div class="card-header" role="tab" id="heading-A">
@@ -136,13 +136,11 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <!-- /table-responsive -->
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- /TAB A -->
                 <div id="pane-B" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-B">
                     <div class="card-header" role="tab" id="heading-B">
                         <h5 class="mb-0">
@@ -175,7 +173,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- /row -->
                             <div class="row justify-content-between">
                                 <div class="col-lg-5">
                                     <div class="review_content">
@@ -198,17 +195,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- /row -->
                             <p class="text-right"><a href="leave-review.html" class="btn_1">Leave a review</a></p>
                         </div>
-                        <!-- /card-body -->
                     </div>
                     
                 </div>
-                <!-- /tab B -->
             </div>
-            <!-- /tab-content -->
-        </div>
+        </div> -->
         <!-- /container -->
     </div>
     <!-- /tab_content_wrapper -->
