--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -9,8 +9,8 @@
                               <ul>
                                   <li class="language"><a translate="home.language"><i class="icon-right ion-ios-arrow-down"></i></a>
                                       <ul class="dropdown_language">
-                                          <li><a (click)="changeLangage('en')" href="#">English</a></li>
-                                          <li><a (click)="changeLangage('ar')" href="#">العربية</a></li>
+                                          <li><button class="btn btn-sm btn-link" (click)="changeLangage('en')">English</button></li>
+                                          <li><button class="btn btn-sm btn-link" (click)="changeLangage('ar')" href="#">العربية</button></li>
                                       </ul>
                                   </li>
                                   <li class="currency"><a translate="home.currency"><i class="icon-right ion-ios-arrow-down"></i></a>
