--- a/src/app/myaccount/myaccount.component.html
+++ b/src/app/myaccount/myaccount.component.html
@@ -25,7 +25,7 @@
                                 <!-- Single Tab Content Start -->
                                 <div class="tab-pane fade show active" id="dashboad" role="tabpanel">
                                     <div class="myaccount-content">
-                                        <h3>Dashboard</h3>
+                                        <h3 translate="account.dashboard"></h3>
                                         <div class="welcome">
                                             <p>Hello, <strong>Alex Tuntuni</strong> (If Not <strong>Tuntuni !</strong><a href="login-register.html" class="logout"> Logout</a>)</p>
                                         </div>
@@ -37,7 +37,7 @@
                                 <!-- Single Tab Content Start -->
                                 <div class="tab-pane fade" id="orders" role="tabpanel">
                                     <div class="myaccount-content">
-                                        <h3>Orders</h3>
+                                        <h3 translate="account.orders"></h3>
                                         <div class="myaccount-table table-responsive text-center">
                                             <table class="table table-bordered">
                                                 <thead class="thead-light">
@@ -80,7 +80,7 @@
                                 <!-- Single Tab Content Start -->
                                 <div class="tab-pane fade" id="download" role="tabpanel">
                                     <div class="myaccount-content">
-                                        <h3>Downloads</h3>
+                                        <h3 translate="account.download"></h3>
                                         <div class="myaccount-table table-responsive text-center">
                                             <table class="table table-bordered">
                                                 <thead class="thead-light">
@@ -113,7 +113,7 @@
                                 <!-- Single Tab Content Start -->
                                 <div class="tab-pane fade" id="payment-method" role="tabpanel">
                                     <div class="myaccount-content">
-                                        <h3>Payment Method</h3>
+                                        <h3 translate="account.payment"></h3>
                                         <p class="saved-message">You Can't Saved Your Payment Method yet.</p>
                                     </div>
                                 </div>
@@ -121,7 +121,7 @@
                                 <!-- Single Tab Content Start -->
                                 <div class="tab-pane fade" id="address-edit" role="tabpanel">
                                     <div class="myaccount-content">
-                                        <h3>Billing Address</h3>
+                                        <h3 translate="account.address"></h3>
                                         <address>
                                             <p><strong>Alex Tuntuni</strong></p>
                                             <p>1355 Market St, Suite 900 <br>
@@ -135,7 +135,7 @@
                                 <!-- Single Tab Content Start -->
                                 <div class="tab-pane fade" id="account-info" role="tabpanel">
                                     <div class="myaccount-content">
-                                        <h3>Account Details</h3>
+                                        <h3 translate="home.account"></h3>
                                         <div class="account-details-form">
                                             <form action="#">
                                                 <div class="row">
