--- a/src/app/myaccount/wishlist/wishlist.component.html
+++ b/src/app/myaccount/wishlist/wishlist.component.html
@@ -20,7 +20,7 @@
       <!-- /col -->
       <div *ngFor="let Product of Products" class="col-6 col-md-6 col-xl-4">
         <div class="grid_item">
-          <span class="ribbon hot">{{Product.category}}</span>
+          <span class="ribbon hot" translate="category.fruits"></span>
           <figure>
             <a [routerLink]="['/product']">
               <img class="img-fluid lazy" [src]="Product.image" alt="">
@@ -28,7 +28,7 @@
             </a>
           </figure>
           <a [routerLink]="['/product']">
-            <h3>{{Product.name}}</h3>
+            <h3 translate="category.orange"></h3>
           </a>
           <div class="price_box">
             <span class="new_price">${{Product.price}}</span>
