--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -18,7 +18,7 @@
           <!-- /col -->
           <div *ngFor="let Product of Products" class="col-6 col-md-4 col-xl-3">
             <div class="grid_item">
-              <span class="ribbon hot">{{Product.category}}</span>
+              <span class="ribbon hot" translate="category.fruits"></span>
               <figure>
                 <a [routerLink]="['/product']">
                   <img class="img-fluid lazy" [src]="Product.image" alt="">
@@ -26,10 +26,32 @@
                 </a>
               </figure>
               <a [routerLink]="['/product']">
-                <h3>{{Product.name}}</h3>
+                <h3 translate="category.orange"></h3>
               </a>
               <div class="price_box">
                 <span class="new_price">${{Product.price}}</span>
+              </div>
+              <ul>
+                <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
+                <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
+              </ul>
+            </div>
+            <!-- /grid_item -->
+          </div>
+          <div *ngFor="let Product of Products" class="col-6 col-md-4 col-xl-3">
+            <div class="grid_item">
+              <span class="ribbon hot" translate="category.grocery"></span>
+              <figure>
+                <a [routerLink]="['/product']">
+                  <img class="img-fluid lazy" src="assets/img/products/olive-oil.jpg" alt="">
+                  <img class="img-fluid lazy" [src]="Product.image" alt="">
+                </a>
+              </figure>
+              <a [routerLink]="['/product']">
+                <h3 translate="category.olive_oil"></h3>
+              </a>
+              <div class="price_box">
+                <span class="new_price">$100</span>
               </div>
               <ul>
                 <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
@@ -66,9 +88,9 @@
                             <tr>
                                 <td>
                                     <div class="thumb_cart">
-                                        <img src="img/products/product_placeholder_square_small.jpg" data-src="img/products/shoes/1.jpg" class="lazy" alt="Image">
+                                        <img src="assets/img/products/orange.jpg" data-src="assets/img/products/orange.jpg" class="lazy" alt="Image">
                                     </div>
-                                    <span class="item_cart">Armor Air x Fear</span>
+                                    <span class="item_cart" translate="category.orange"></span>
                                 </td>
                                 <td>
                                     <strong>$140.00</strong>
@@ -88,9 +110,9 @@
                             <tr>
                                 <td>
                                     <div class="thumb_cart">
-                                        <img src="img/products/product_placeholder_square_small.jpg" data-src="img/products/shoes/2.jpg" class="lazy" alt="Image">
+                                        <img src="assets/img/products/tomatoes.jpg" data-src="img/products/shoes/2.jpg" class="lazy" alt="Image">
                                     </div>
-                                    <span class="item_cart">Armor Okwahn II</span>
+                                    <span class="item_cart" translate="category.tomato"></span>
                                 </td>
                                 <td>
                                     <strong>$110.00</strong>
@@ -107,35 +129,13 @@
                                     <a href="#"><i class="ti-trash"></i></a>
                                 </td>
                             </tr>
-                            <tr>
-                                <td>
-                                    <div class="thumb_cart">
-                                        <img src="img/products/product_placeholder_square_small.jpg" data-src="img/products/shoes/3.jpg" class="lazy" alt="Image">
-                                    </div>
-                                    <span class="item_cart">Armor Air Wildwood ACG</span>
-                                </td>
-                                <td>
-                                    <strong>$90.00</strong>
-                                </td>
-                                
-                                <td>
-                                    <div class="numbers-row">
-                                        <input type="text" value="1" id="quantity_3" class="qty2" name="quantity_3">
-                                    <div class="inc button_inc">+</div><div class="dec button_inc">-</div></div>
-                                </td>
-                                <td>
-                                    <strong>$90.00</strong>
-                                </td>
-                                <td class="options">
-                                    <a href="#"><i class="ti-trash"></i></a>
-                                </td>
-                            </tr>
+                           
                         </tbody>
                     </table>
 
                     <div class="row add_top_30 flex-sm-row-reverse cart_actions">
                     <div class="col-sm-4 text-right">
-                        <button type="button" class="btn_1 gray">Update Cart</button>
+                        <button type="button" class="btn_1 gray" translate="cart.update"></button>
                     </div>
                         <div class="col-sm-8">
                         <div class="apply-coupon">
@@ -156,16 +156,16 @@
             <div class="col-xl-4 col-lg-4 col-md-6">
         <ul>
             <li>
-                <span>Subtotal</span> $240.00
+                <span translate="cart.subtotal"></span> $240.00
             </li>
             <li>
-                <span>Shipping</span> $7.00
+                <span translate="cart.shiping"></span> $7.00
             </li>
             <li>
-                <span>Total</span> $247.00
+                <span translate="cart.total"></span> $247.00
             </li>
         </ul>
-        <a routerLink="/checkout" class="btn_1 full-width cart">Proceed to Checkout</a>
+        <a routerLink="/checkout" class="btn_1 full-width cart" translate="cart.proceed"></a>
                 </div>
             </div>
         </div>
