--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -3,12 +3,12 @@
         <div class="page_header">
             <div class="breadcrumbs">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Category</a></li>
-                    <li>Fruit</li>
+                    <li><a href="#" translate="home.home"></a></li>
+                    <li><a href="#" translate="category.category"></a></li>
+                    <li translate="category.fruits"></li>
                 </ul>
             </div>
-            <h1>Orange</h1>
+            <h1 translate="category.orange"></h1>
         </div>
         <!-- /page_header -->
         <!-- /row -->
@@ -26,7 +26,7 @@
                 <div class="col-lg-6">
                     <div class="prod_info version_2">
                         <!-- <span class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i><em>4 reviews</em></span> -->
-                        <p><small>SKU: MTKRY-001</small><br>Lorem ipsum dolor sit amet, his no adipisci pericula conclusionemque. Qui labore salutandi ex, vivendum argumentum mediocritatem vis eu, viris tritani per id. At iudicabit maluisset vis, dicant diceret pri cu. Cum at rebum vulputate forensibus, eruditi principes ad vel, pro denique recusabo at. Ubique nominavi delicata sit cu, quo no reque insolens suscipiantur.</p>
+                        <p translate="cart.dummy_text"><br></p>
                     </div>
                     <div class="prod_options version_2">
                         <!-- <div class="row">
@@ -54,7 +54,7 @@
                             </div>
                         </div> -->
                         <div class="row">
-                            <label class="col-xl-7 col-lg-5  col-md-6 col-6"><strong>Quantity</strong></label>
+                            <label class="col-xl-7 col-lg-5  col-md-6 col-6"><strong translate="cart.quantity"></strong></label>
                             <div class="col-xl-5 col-lg-5 col-md-6 col-6">
                                 <div class="numbers-row">
                                     <input type="text" value="1" id="quantity_1" class="qty2" name="quantity_1">
@@ -68,7 +68,7 @@
                                 <div class="price_main"><span class="new_price">$148.00</span><span class="percentage">-20%</span> <span class="old_price">$160.00</span></div>
                             </div>
                             <div class="col-lg-5 col-md-6">
-                                <div class="btn_add_to_cart"><a href="#0" class="btn_1">Add to Cart</a></div>
+                                <div class="btn_add_to_cart"><a href="#0" class="btn_1" translate="cart.add_to_cart"></a></div>
                             </div>
                         </div>
                     </div>
