--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,13 +1,12 @@
 <div class="container margin_30">
     <div class="page_header">
-        <div class="breadcrumbs">
+        <!-- <div class="breadcrumbs">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Category</a></li>
-                <li>Page active</li>
             </ul>
-         </div>
-        <h1>Sign In or Create an Account</h1>
+         </div> -->
+        <!-- <h1>Sign In or Create an Account</h1> -->
     </div>
 <!-- /page_header -->
         <div class="row justify-content-center">
